--- a/css/styles.css
+++ b/css/styles.css
@@ -9,6 +9,8 @@
   --secbtn-color:#188ce8;
   --adress-color:rgba(255, 255, 255, 0.6);
   --bg-soc-link:rgba(255, 255, 255, 0.1);
+  --bg-modal: rgba(0, 0, 0, 0.2);
+  --bg-modal-sec:rgba(0, 0, 0, 0.1);
   --border-accent:#ECECEC;
   --back-button:#f5f4fa;
   --sec-border-accent: #EEEEEE;
@@ -150,6 +152,17 @@ ul {
 .link.active {
   color: var(--link-accent);
 }
+
+.active::after{
+  content: '';
+  display: block;
+  position: relative;
+  bottom: -33px;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--link-accent);
+}
+
 
 .header-list .link:hover,
 .header-list .link:focus,
@@ -597,4 +610,42 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
   font-weight: 400;
   font-size: 16px;
   line-height: 1.87;
+}
+/* ==========MODAL=WINDOW========== */
+.backdrop{
+  position: fixed;
+  top: 0;
+  width: 100vw;
+  height: 1024px;
+  background: var(--bg-modal);
+}
+
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 528px;
+  min-height: 581px;
+  background-color: var(--secondary-accent);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12),
+  0px 1px 1px rgba(0, 0, 0, 0.14),
+  0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+}
+
+.modal-icon-close{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  border: 1px solid var(--bg-modal-sec);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+  visibility: hidden;
 }
