--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@
   --back-button:#f5f4fa;
   --sec-border-accent: #EEEEEE;
   --icon-color:#AFB1B8;
+  --what-bg:rgba(47, 48, 58, 0.8);
+  --portfolio-bg:rgba(33, 150, 243, 0.9);
   --margin9:9px;
   --margin10:10px;
   --margin16:16px;
@@ -26,6 +28,8 @@
   --padding60:60px;
   --padding94:94px;
   --padding200:200px;
+  --duration250ms: 250ms;
+  --time-function:cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -106,16 +110,18 @@ ul {
 }
 
 .header-list .link {
-  color: var(--main-text);
+  transition: color var(--duration250ms) var(--time-function);
+
+  display: block;
+  padding-top: var(--padding32);
+  padding-bottom: var(--padding32);
 
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  display: block;
-  padding-top: var(--padding32);
-  padding-bottom: var(--padding32);
+  color: var(--main-text);
 }
 
 
@@ -131,15 +137,17 @@ ul {
 }
 
 .contacts .link {
-  color: var(--secondary-text);
+  transition: color var(--duration250ms) var(--time-function);
+
+  padding-top: var(--padding32);
+  padding-bottom: var(--padding32);
 
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 
-  padding-top: var(--padding32);
-  padding-bottom: var(--padding32);
+  color: var(--secondary-text);
 }
 
 .contacts-icon{
@@ -151,15 +159,19 @@ ul {
 /*Active */
 .link.active {
   color: var(--link-accent);
+  position: relative;
 }
 
 .active::after{
   content: '';
-  display: block;
-  position: relative;
-  bottom: -33px;
+  position: absolute;
+  bottom: -1px;
+  left: 0;
+
+  width: 100%;
   height: 4px;
   border-radius: 2px;
+
   background-color: var(--link-accent);
 }
 
@@ -194,8 +206,10 @@ ul {
 }
 
 .hero-capt {
-  
-  color: var(--secondary-accent);
+  max-width: 700px;
+  margin-right: auto;
+  margin-bottom: var(--margin30);
+  margin-left: auto;
 
   font-weight: 900;
   font-size: 44px;
@@ -203,26 +217,25 @@ ul {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  max-width: 700px;
-  margin-right: auto;
-  margin-bottom: var(--margin30);
-  margin-left: auto;
+  color: var(--secondary-accent);
 }
 
 /* Button */
 .btn {
-  background: var(--link-accent);
-  color: var(--secondary-accent);
+  transition: background-color var(--duration250ms) var(--time-function);
 
+  border-radius: 4px;
+  padding: 10px var(--padding32);
+  min-width: 200px;
+  
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.06em;
   cursor: pointer;
 
-  border-radius: 4px;
-  padding: 10px var(--padding32);
-  min-width: 200px;
+  background-color: var(--link-accent);
+  color: var(--secondary-accent);
 }
 
 .btn:hover,
@@ -259,32 +272,35 @@ display: flex;
 }
 
 .advantage-icon{
-  width: 270px;
-  height: 120px;
-  background-color: var(--back-button);
   display: flex;
   justify-content: center;
   align-items: center;
+
+  width: 270px;
+  height: 120px;
+
+  background-color: var(--back-button);
 }
 
 .item-caption{
-  color: var(--main-text);
+  margin-top: var(--margin30);
+  margin-bottom: var(--margin10);
 
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  margin-top: var(--margin30);
-  margin-bottom: var(--margin10);
+
+  color: var(--main-text);
 }
 
 .item-text {
-  color: var(--secondary-text);
+  max-width: 270px;
 
   font-size: 14px;
   font-weight: 400;
   line-height: 1.71;
 
-  max-width: 270px;
+  color: var(--secondary-text);
 }
 
 /* =============What we do=================== */
@@ -295,13 +311,13 @@ display: flex;
 }
 
 .section-caption {
-  color: var(--main-text);
+  margin-bottom: var(--margin50);
 
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
 
-  margin-bottom: var(--margin50);
+  color: var(--main-text);
 }
 
 .what-list{
@@ -310,6 +326,8 @@ display: flex;
 }
 
 .what-item{
+  position: relative;
+  
   flex-basis: calc(100% / 3 - var(--padding30));
   margin-right: var(--padding30);
 }
@@ -318,6 +336,24 @@ display: flex;
   display: block;
   max-width: 100%;
   height: auto;
+}
+
+.what-text{
+  position: absolute;
+  bottom: 0;
+
+  width: 100%;
+  height: 70px;
+  padding: 27px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  background-color: var(--what-bg);
+  color: var(--secondary-accent);
 }
 
 /* ==========Section our team ===================*/
@@ -381,6 +417,9 @@ display: flex;
 }
 
 .team-soc-link{
+  transition: background-color var(--duration250ms) var(--time-function), 
+  fill var(--duration250ms) var(--time-function);
+
   width: 44px;
   height: 44px;
   background-color: var(--secondary-accent);
@@ -415,6 +454,9 @@ display: flex;
 }
 
 .clients-link{
+  transition: fill var(--duration250ms) var(--time-function),
+  border var(--duration250ms) var(--time-function);
+
   width: 170px;
   height: 92px;
   border: 1px solid var(--icon-color);
@@ -457,17 +499,20 @@ margin-bottom: var(--margin20);
 }
 
 .item-adress .link {
-  color: var(--secondary-accent);
+  transition: color var(--duration250ms) var(--time-function);
+
+  display: block;
 
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
 
-  display: block;
+  color: var(--secondary-accent);
 }
 
 .link.adress {
+  transition: color var(--duration250ms) var(--time-function);
   color: var(--adress-color);
 }
 
@@ -502,6 +547,8 @@ margin-bottom: var(--margin20);
 }
 
 .join-link{
+  transition: background-color var(--duration250ms) var(--time-function);
+
   width: 44px;
   height: 44px;
   background-color: var(--bg-soc-link);
@@ -535,14 +582,9 @@ background-color: var(--link-accent);
 }
 
 .item-btn {
-  background: var(--back-button);
-  color: var(--main-text);
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  letter-spacing: 0.03em;
-  cursor: pointer;
+  transition: background var(--duration250ms) var(--time-function),
+  color var(--duration250ms) var(--time-function),
+  box-shadow var(--duration250ms) var(--time-function);
 
   padding-top: 6px;
   padding-right: 22px;
@@ -550,6 +592,15 @@ background-color: var(--link-accent);
   padding-left: 22px;
   border-radius: 4px;
   border: var(--back-button);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+
+  background: var(--back-button);
+  color: var(--main-text);
 }
 
 .item-btn:hover,
@@ -574,6 +625,9 @@ background-color: var(--link-accent);
   margin-bottom: var(--padding30);
 }
 
+.gallery-link{
+  transition: box-shadow var(--duration250ms) var(--time-function);
+}
 
 .gallery-link:hover,
 .gallery-link:focus{
@@ -582,6 +636,37 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 0px 4px 4px rgba(0, 0, 0, 0.06),
 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
+
+.gallery-wrap{
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery-wrap:hover .gallery-cover-text,
+.gallery-wrap:focus .gallery-cover-text {
+  transform: translateY(0);
+}
+
+.gallery-cover-text{
+  transform: translateY(100%);
+  transition: transform var(--duration250ms) var(--time-function);
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  padding-top: 63px;
+  padding-right: 24px;
+  padding-bottom: 63px;
+  padding-left: 24px;
+
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.56;
+
+  background-color: var(--portfolio-bg);
+  color: var(--secondary-accent);
+}
+
 
 .gallery-ptext{
   padding-top: 20px;
@@ -615,16 +700,26 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
 .backdrop{
   position: fixed;
   top: 0;
-  width: 100vw;
-  height: 1024px;
+  width: 100%;
+  height: 100%;
   background: var(--bg-modal);
+  transition: opacity 500ms,
+  visibility 500ms,
+  transform 500ms;
+}
+
+.backdrop.is-hidden .modal{
+  top: 50%;
+  left: 50%;
+  transform: rotateY(180deg) rotateX(0) translate(-50%, -50%) scale(0.3);
 }
 
 .modal{
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: rotateY(360deg) rotateX(360deg) translate(-50%,-50%) scale(1);
+  transition: transform 500ms;
   width: 528px;
   min-height: 581px;
   background-color: var(--secondary-accent);
@@ -638,12 +733,15 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
   position: absolute;
   top: 8px;
   right: 8px;
-  border: 1px solid var(--bg-modal-sec);
-  border-radius: 50%;
   width: 30px;
   height: 30px;
+  padding: 5px;
+  border: 1px solid var(--bg-modal-sec);
+  border-radius: 50%;
   cursor: pointer;
+  background-color: transparent;
 }
+
 .is-hidden{
   opacity: 0;
   pointer-events: none;
