--- a/css/styles.css
+++ b/css/styles.css
@@ -642,8 +642,8 @@ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
   overflow: hidden;
 }
 
-.gallery-wrap:hover .gallery-cover-text,
-.gallery-wrap:focus .gallery-cover-text {
+.gallery-link:hover .gallery-cover-text,
+.gallery-link:focus .gallery-cover-text {
   transform: translateY(0);
 }
 
